derive/tests/snapshots/qualified_type_spellings/Document/get_all_documents.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `document` table.
    pub fn get_all_documents<'a>(&'a self) -> impl Iterator<Item = Document> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().document().iter()
    }
}
