derive/tests/snapshots/qualified_type_spellings/Document/get_documents_by_bare_note.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Document` iterator that contains all rows in the `document` table whose value matches the value from the single-column btree index on the `bare_note` column.
    pub fn get_documents_by_bare_note<'a>(
        &'a self,
        bare_note: &impl Into<Option<DocumentBareNote>>,
    ) -> impl Iterator<Item = Document> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let bare_note = match bare_note.into() {
            None => None,
            Some(bare_note) => Some(Into::<DocumentBareNote>::into(bare_note).value()),
        };
        self.db().document().bare_note().filter(bare_note)
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Document` iterator that contains all rows in the `document` table whose value matches the value from the single-column btree index on the `bare_note` column.
    pub fn get_documents_by_bare_note<'a>(
        &'a self,
        bare_note: &impl Into<Option<DocumentBareNote>>,
    ) -> impl Iterator<Item = Document> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let bare_note = match bare_note.into() {
            None => None,
            Some(bare_note) => Some(Into::<DocumentBareNote>::into(bare_note).value()),
        };
        self.db().document().bare_note().filter(bare_note)
    }
}
