derive/tests/snapshots/qualified_type_spellings/Document/get_documents_by_qualified_note.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Document` iterator that contains all rows in the `document` table whose value matches the value from the single-column btree index on the `qualified_note` column.
    pub fn get_documents_by_qualified_note<'a>(
        &'a self,
        qualified_note: &impl Into<Option<DocumentQualifiedNote>>,
    ) -> impl Iterator<Item = Document> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let qualified_note = match qualified_note.into() {
            None => None,
            Some(qualified_note) => {
                Some(Into::<DocumentQualifiedNote>::into(qualified_note).value())
            }
        };
        self.db().document().qualified_note().filter(qualified_note)
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Document` iterator that contains all rows in the `document` table whose value matches the value from the single-column btree index on the `qualified_note` column.
    pub fn get_documents_by_qualified_note<'a>(
        &'a self,
        qualified_note: &impl Into<Option<DocumentQualifiedNote>>,
    ) -> impl Iterator<Item = Document> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let qualified_note = match qualified_note.into() {
            None => None,
            Some(qualified_note) => {
                Some(Into::<DocumentQualifiedNote>::into(qualified_note).value())
            }
        };
        self.db().document().qualified_note().filter(qualified_note)
    }
}
